--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Let's Try This</title>
+    <title>Prime It 3000</title>
   </head>
 
   <body>
-    <p>Hi! Hi from Dan!</p>
+    <p>This program will find all</p>
+    <p>the prime numbers in a range.</p>
+    <p>Type a range starting from at least 2.</p>
+    <p>.<p>
+    <p>.<p>
+    <p>It will find all the primes up to about four hundred thousand.<p>
+    <p>And it will find a small range of primes at about 100 million.<p>
     <script type="text/javascript">
       console.log("hey! I'm a script!")
     </script>
 
-    <script src="./test.js" charset="utf-8"></script>
+    <script src="./prime.js" charset="utf-8"></script>
 
   </body>
 </html>
